# simultrabots

./: .gitignore  ChangeLog  Makefile  Makefile.am  config.h  config.status  configure.ac  kill  libtool  prepare-package.sh  start  start.sh  team.yml
doc/: doxygen.cfg
src/: Makefile  Makefile.am  Player.cpp  Player.h  PlayerTeams.cpp  WorldModel.cpp  WorldModel.h  WorldModelHighLevel.cpp  WorldModelPredict.cpp  trilearn_coach  trilearn_player
src/.deps/: ActHandler.Po  BasicCoach.Po  BasicPlayer.Po  Connection.Po  Formations.Po  GenericValues.Po  Geometry.Po  Logger.Po  Objects.Po  Parse.Po  Player.Po  PlayerSettings.Po  PlayerTeams.Po  SenseHandler.Po  ServerSettings.Po  SoccerTypes.Po  WorldModel.Po  WorldModelHighLevel.Po  WorldModelPredict.Po  WorldModelUpdate.Po  main.Po  mainCoach.Po
